som/static/som/style.css
body {
    height: 100%;
    overflow-x: hidden;
}

.add-som {
    position: relative;
    left: 20vw;
    top: 0px;
    width: 80vw;
    min-height: 55vh;
    margin-top: -50px;
}

.add-som .card {
    margin-left: 10%;
    margin-right: 10%;
}

#add-som-form {
    border-top: solid 1px;
    border-color: #d4d4d4;
    margin-top: 25px;
    padding-top: 15px;
}

#add-som-form .tabs {
    background-color: seashell;
}


#add-som-form .tab-inner {
    background-color: seashell;
}

#add-som-form .tab-inner .input-field {
    width: 50%;
    margin-top: 25px;
}


#add-som-form .input-field input[type=text]:focus + label,
.edit-tools .input-field input[type=text]:focus + label,
.modal_window .input-field input[type=text]:focus + label{
    color: deeppink;
}

#add-som-form .input-field input[type=text]:focus,
.edit-tools .input-field input[type=text]:focus,
.modal_window .input-field input[type=text]:focus,
.input-field input[type=text].valid {
     border-bottom: 1px solid deeppink;
     box-shadow: 0 1px 0 0 deeppink;
}

#add-som-form .input-field textarea:focus {
     border: 1px solid deeppink;
     box-shadow: 0 1px 0 0 deeppink;
}

.edit-tools {
    margin-top: 15px;
    margin-bottom: 20px;
}

.edit-tools table {
    padding-bottom: 15px;
}

.edit-tools img {
    width: 32px;
}

.edit-tools i {
    font-size: 32px;
}

.operation-button {
    margin-top: 50%;
    align-items: center;
}




.icon-disclaimer {
    font-size: 8pt;
    position: absolute;
    bottom: 80px;
}

#som-container, .cutouts {
    text-align: center;
    display: grid;
}

#toolbox {
    padding-top: 30px;
    margin-bottom: 10px;
    padding-left: 35px;
    padding-right: 35px;
}

.sidenav .headline {
    font-size: 16pt;
    padding-top: 10px;
    line-height: 2;
}

.sidenav #toolbox li > a{
    padding: 0;
}

#toolbox p {
    padding: 0;
    margin-bottom: 15px;
    font-style: italic;
}

#toolbox li.active, #toolbox .collapsible, #toolbox .collapsible-header, #toolbox .collapsible-body {
    background-color: seashell;
}

.inspection-tools {
    display: grid;
    padding-top: 15px;
    padding-bottom: 15px;
    grid-template-columns: repeat(6, 34px);
    grid-template-rows: repeat(1, auto);
    grid-gap: 16px;
}

.inspection-tools i {
    font-size: 34px;
}

.export-tools i {
    font-size: 48px;
}

#toolbox .export-tools img {
    width: 48px;
}
#toolbox img, #toolbox i {
    opacity: 0.5;
}

#toolbox img:hover, #toolbox i:hover {
    opacity: 1;
    cursor: pointer;
}

#toolbox .tool-selected, #toolbox .view-selected {
    opacity: 1;
}

#toolbox .input-field label {
    line-height: 2;
}


#toolbox .export-tools {
    margin-top: 10px;
    display: grid;
    grid-template-columns: repeat(5, 48px);
    grid-template-rows: repeat(1, auto);
    grid-gap: 10px;
}

.toolbox-input {
    width: 100%;
    margin-top: 10px;
}

.som-view {
    margin: 0;
    padding: 0;
}

.som-page {
    min-height: calc(100vh - 115px);
    width: 100%;
    height: 100%;
    position: fixed;
    overflow: hidden;
}

#som-container {
    top: 100px;
    background-repeat: no-repeat;
    background-size: 100%;
    width: 80vh;
    height: 80vh;
    bottom: 20px;
    grid-gap: 0;
    position: fixed;
    left: 25vw;
    transform-origin: 0px 0px;
    transform: scale(1) translate(0px, 0px);
}

#som-container.hex-som {
    display: grid;
    grid-gap: 1px;

}

#som-container.hex-som .prototype {
    grid-column: auto / span 2;
    overflow: visible;
    background-color: rgba(0,0,0,0);
}



.cutouts {
    position: relative;
    padding-top: 20px;
    padding-bottom: 20px;
    grid-template-columns: repeat(5, auto);
    grid-template-rows: repeat(2, auto);
    grid-gap: 10px;
}

#som-container img, .cutouts img {
    width: 100%;
}

#som-container img:hover {
    cursor: pointer;
    opacity: 0.5;
}

.transparent-view img {
    opacity: 0.2;
}

.prototype {
    opacity: 1;
    margin: 0;
    padding: 0;
}

#som-container .proto-selected, .cutout-selected {
    opacity: 0.5;
}

.cutout-img:hover {
    cursor: pointer;
}

.modal_window {
    padding: 50px;
    position: absolute;
    background-color: seashell;
    color: black;
    width: 80vh;
    left: 25vw;
    margin: 0;
}

.modal_window .btn {
    width: 100%;
    height: 48px;
    line-height: 1.4;
}

.modal_window p {
    font-size: 16pt;
}

.modal_window .icon {
    text-align: right;
}

.modal_window .icon img{
    width: 30px;
    opacity: 0.5;
}

.modal_window .icon img:hover {
    opacity: 1;
    cursor: pointer;
}

.no-som {
    position: relative;
    left: 100px;
    top: 100px;
}

.som-info {
    position: fixed;
    right: 0;
    top: 100px;
    margin-right: 5vw;
    text-align: left;
    width: 20vw;
}

.som-info img {
    width: 100%;
    right: 50px;

}

.som-info table {
    padding-top: 15px;
    padding-bottom: 15px;
    font-size: 14pt;
    width: 20vw;
}


.magnifier {
    position: fixed;
    border: 1px solid #d4d4d4;
    /*set the size of the lens:*/
    width: 100px;
    height: 100px;
    z-index: 500;
}

.prototype-info p {
    margin-top: 15px;
    margin-bottom: 15px;
}

.proto-preview {
    padding-top: 20px;
}
.proto-preview img {
    width: 75%;
}

#label-legend {
    background-color: mistyrose;
    margin-top: 15px;
    padding: 15px;
    display: none;
}

#histogram {
    margin-top: -30px;
    display: none;
}

#histogram img {
    width: 100%;
}

.label-legend {
    display: grid;
    grid-template-columns: auto auto;
    grid-gap: 2px;
}

.square {
    height: 25px;
    width: 25px;
}

